--- a/Task 2/Task 2.1/Task 2.1.1/Task 2.1.1.csproj
+++ b/Task 2/Task 2.1/Task 2.1.1/Task 2.1.1.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Task_2._1._1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CustomStringLibrary\CustomStringLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
