Task2.2.1 Changing game architecture

--- a/Task 2/Task 2.2/Task2.2.1.GameLogic/Task2.2.1.GameLogic.csproj
+++ b/Task 2/Task 2.2/Task2.2.1.GameLogic/Task2.2.1.GameLogic.csproj
@@ -5,4 +5,8 @@
     <RootNamespace>Task2._2._1.GameLogic</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Task2.2.1.GameLogic.Interfaces\Task2.2.1.GameLogic.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
