--- a/Task 2/Task 2.2/Task2.2.1.GameLogic.Interfaces/Task2.2.1.GameLogic.Interfaces.csproj
+++ b/Task 2/Task 2.2/Task2.2.1.GameLogic.Interfaces/Task2.2.1.GameLogic.Interfaces.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Task_2._2._1_Game</RootNamespace>
+    <RootNamespace>Task2._2._1.GameLogic.Interfaces</RootNamespace>
   </PropertyGroup>
 
 </Project>
