--- a/Task 2/Task 2.2/Task2.2.1.GameUI/Task2.2.1.GameUI.csproj
+++ b/Task 2/Task 2.2/Task2.2.1.GameUI/Task2.2.1.GameUI.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Task2._2._1.GameUI</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Task2.2.1.GameLogic.Interfaces\Task2.2.1.GameLogic.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
