Task 3.2.1 Added base of DynamicArray<T> class

--- a/Task 3/Task 3.2/Task3.2.1.TestPlace/Task3.2.1.TestPlace.csproj
+++ b/Task 3/Task 3.2/Task3.2.1.TestPlace/Task3.2.1.TestPlace.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Task3._2._1.TestPlace</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Task3.2.1.Library\Task3.2.1.Library.csproj" />
+  </ItemGroup>
+
 </Project>
