--- a/Task 3/Task 3.1/Task 3.1.1/Task 3.1.1.csproj
+++ b/Task 3/Task 3.1/Task 3.1.1/Task 3.1.1.csproj
@@ -6,4 +6,10 @@
     <RootNamespace>Task_3._1._1</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="Task3.2.1.Library">
+      <HintPath>..\..\Task 3.2\Task3.2.1.Library\bin\Debug\net5.0\Task3.2.1.Library.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
