--- a/Task 3/Task 3.1/Task3.1.2/Task3.1.2.csproj
+++ b/Task 3/Task 3.1/Task3.1.2/Task3.1.2.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Helpers\Helpers.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Task3.2.1.Library">
       <HintPath>..\..\Task 3.2\Task3.2.1.Library\bin\Debug\net5.0\Task3.2.1.Library.dll</HintPath>
     </Reference>
